--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.4",
-    "base-64": "^1.0.0",
-    "buffer": "^6.0.3",
     "expo": "~42.0.1",
     "expo-av": "~9.2.3",
     "expo-status-bar": "~1.0.4",
@@ -23,14 +21,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-base64": "^0.2.1",
     "react-native-paper": "^4.9.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12",
-    "expo-file-system": "~11.1.3",
-    "expo-asset": "~8.3.3"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
